--- a/ConnectRivier/WebContent/WEB-INF/web.xml
+++ b/ConnectRivier/WebContent/WEB-INF/web.xml
@@ -25,7 +25,7 @@
     <session-timeout>30</session-timeout>
   </session-config>
   <welcome-file-list>
-    <welcome-file>connectrivier/signin.jsp</welcome-file>
+    <welcome-file>connectrivier/main.jsp</welcome-file>
   </welcome-file-list>
   <jsp-config>
     <taglib>
